reorganize textedit routecontrollers
