# components/WebServer/routes/api/users/users.js
@@ -1,16 +1,23 @@
 const debug = require('debug')('app:router:api:user:user')
 const {
+    getUsers,
     createUser, 
     getUserbyId, 
     getUserByName, 
     deleteUser, 
     addUserConvoAccess, 
-    removeUserConvoAccess} = require(`${process.cwd()}/components/WebServer/routecontrollers/user/user.js`)
+    removeUserConvoAccess} = require(`${process.cwd()}/components/WebServer/routecontrollers/users/users.js`)
 const {isOwner} = require(`${process.cwd()}/components/WebServer/middlewares`)
 
 
 module.exports = (webserver) => {
     return [{
+        path: '/',
+        method: 'get', 
+        requireAuth: false, 
+        controller: getUsers
+        },
+        {
             path: '/',
             method: 'post',
             requireAuth: false,
